libs/extractor/src/snapshots/extractor__tests__vanilla_extract_imports_combination.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"imports-combo.css.ts\",\nr\"import { style, globalStyle, keyframes, fontFace } from '@devup-ui/react'\nexport const fadeIn = keyframes({ from: { opacity: 0 }, to: { opacity: 1 } })\nexport const myFont = fontFace({ src: 'local(Arial)' })\nglobalStyle('body', { margin: 0, fontFamily: myFont })\nexport const animated = style({ animation: fadeIn })\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "a",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "\"font-0-0\"",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "imports-combo.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "imports-combo.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "imports-combo.css.ts",
                properties: {
                    "font-family": "font-0-0",
                    "src": "local(Arial)",
                },
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "to": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "1",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const fadeIn = \"a\";\nexport const animated = \"f0_1 b\";\n;\n;\nexport const myFont = \"\\\"font-0-0\\\"\";\n",
}
