libs/extractor/src/snapshots/extractor__tests__vanilla_extract_layer.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"layers.css.ts\",\nr#\"import { layer, style, globalStyle } from '@devup-ui/react'\nexport const reset = layer('reset')\nexport const base = layer('base')\nexport const components = layer('components')\nglobalStyle('*', {\n  '@layer': reset,\n  margin: 0,\n  padding: 0\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "*",
                        "layers.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "reset-0-0",
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "*",
                        "layers.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: Some(
                    "reset-0-0",
                ),
            },
        ),
        Css(
            ExtractCss {
                css: "@layer reset-0-0,base-0-1,components-0-2;",
                file: "layers.css.ts",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\n;\nexport const reset = \"reset-0-0\";\nexport const base = \"base-0-1\";\nexport const components = \"components-0-2\";\n",
}
