libs/extractor/src/snapshots/extractor__tests__vanilla_extract_layer_and_container.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"layer-container.css.ts\",\nr#\"import { layer, createContainer, style } from '@devup-ui/react'\nexport const resetLayer = layer('reset')\nexport const baseLayer = layer('base')\nexport const myContainer = createContainer()\nexport const containerStyle = style({\n  containerName: myContainer,\n  containerType: 'inline-size'\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "container-name",
                value: "container-0-2",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "container-type",
                value: "inline-size",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                css: "@layer reset-0-0,base-0-1;",
                file: "layer-container.css.ts",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\nexport const containerStyle = \"a b\";\nexport const resetLayer = \"reset-0-0\";\nexport const baseLayer = \"base-0-1\";\nexport const myContainer = \"container-0-2\";\n",
}
