libs/extractor/src/snapshots/extractor__tests__vanilla_extract_media_queries.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"media.css.ts\",\nr\"import { style } from '@devup-ui/react'\nexport const responsive = style({\n  display: 'block',\n  '@media': {\n    'screen and (min-width: 768px)': {\n      display: 'flex'\n    },\n    'screen and (min-width: 1024px)': {\n      display: 'grid'\n    },\n    '(prefers-color-scheme: dark)': {\n      background: 'black',\n      color: 'white'\n    }\n  }\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "black",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(prefers-color-scheme:dark)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "white",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(prefers-color-scheme:dark)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "block",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "screen and (min-width:768px)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "grid",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "screen and (min-width:1024px)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const responsive = \"f0_0 a b c d e\";\n",
}
