libs/extractor/src/snapshots/extractor__tests__vanilla_extract_names_extract_without_source_dependency.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { style, globalStyle, styleVariants } from '@vanilla-extract/css';\nexport const a = style({ color: 'red' });\nglobalStyle('body', { margin: '0px' });\nexport const v = styleVariants({});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases:\n    HashMap::from([(\"@vanilla-extract/css\".to_string(),\n    ImportAlias::NamedToNamed)])\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "0",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { styleVariants } from \"@vanilla-extract/css\";\nexport const a = \"OLcolor-vred\";\n;\nexport const v = styleVariants({});\n",
}
