libs/extractor/src/snapshots/extractor__tests__vanilla_extract_non_exported_theme.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"internal-theme.css.ts\",\nr\"import { createTheme, style } from '@devup-ui/react'\nconst [internalTheme, themeVars] = createTheme({\n  colors: {\n    bg: 'white',\n    text: 'black'\n  }\n})\nexport const themed = style({\n  background: 'red'\n})\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--colors-bg-0-1",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "internal-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-text-0-2",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ".theme-0-0",
                        "internal-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const themed = \"OLbackground-vred\";\n;\n",
}
