libs/extractor/src/snapshots/extractor__tests__vanilla_extract_selector_references.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"selector-refs.css.ts\",\nr#\"import { style } from '@devup-ui/react'\nexport const parent = style({ background: 'white' })\nexport const child = style({\n  selectors: {\n    [`${parent}:hover &`]: {\n      color: 'blue'\n    }\n  }\n})\nexport const sibling = style({\n  selectors: {\n    [`${parent} + &`]: {\n      marginTop: 8\n    }\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "white",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        ".f0_parent:hover &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "8px",
                level: 0,
                selector: Some(
                    Selector(
                        ".f0_parent + &",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const child = \"a\";\nexport const parent = \"b\" + \" f0_parent\";\nexport const sibling = \"c\";\n",
}
